# wayland-rust-example

./: Cargo.toml  README.md
src/: main.rs
