[package]
name = "wayland-rust-example"
version = "0.1.0"
authors = ["Iron Oxidizer <gmail: ironoxidizer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.25.0"
wayland-protocols = {version = "0.25.0", features = ["client"]}

# Try to remove these dependencies
byteorder = "1.3.4"
tempfile = "3.1.0"
